--- a/changelog.txt
+++ b/changelog.txt
@@ -7,4 +7,5 @@ December Release 2014:
 - add twitter account info
 - Remove obsolete Deliverance/XDV docs [it is in Plone 3 now]
 - remove conf.py, it lives in papyrus now
-- update README.rst advice to deal with pypi 
+- update README.rst advice to deal with pypi
+- add in contributing link to trello and community.plone.org
