--- a/_locales/develop.pot
+++ b/_locales/develop.pot
@@ -22209,7 +22209,7 @@ msgstr ""
 
 #: ../develop/plone/forms/z3c.form.rst:299
 # fd6a1a7d8a534f6aa65de539d0c129eb
-msgid "Please see `plone.app.zc3form README <https://github.com/plone/plone.app.z3cform>`_."
+msgid "Please see `plone.app.z3cform README <https://github.com/plone/plone.app.z3cform>`_."
 msgstr ""
 
 #: ../develop/plone/forms/z3c.form.rst:302
