--- a/_locales/it/LC_MESSAGES/develop.po
+++ b/_locales/it/LC_MESSAGES/develop.po
@@ -29073,7 +29073,7 @@ msgstr ""
 # fd6a1a7d8a534f6aa65de539d0c129eb
 #: ../develop/plone/forms/z3c.form.rst:299
 msgid ""
-"Please see `plone.app.zc3form README "
+"Please see `plone.app.z3cform README "
 "<https://github.com/plone/plone.app.z3cform>`_."
 msgstr ""
 
