Added upgrade info about deprecated unicode property types.

--- a/upgrading/version_specific_migration/v60.md
+++ b/upgrading/version_specific_migration/v60.md
@@ -138,6 +138,17 @@ As Manager you may want to use this control panel to look for and fix possible p
 See [PLIP 3232](https://github.com/plone/Products.CMFPlone/issues/3232).
 
 
+## Deprecated unicode property types
+
+Zope 5 has deprecated the unicode property types: ustring, ulines, utext, utokens.
+If you use these in your add-on, you should switch to their standard variants: string, lines, text, tokens.
+These behave exactly the same on Python 3.
+Plone has an upgrade step that goes through all objects in the site, replacing the deprecated properties with the default ones, so you should not see them anymore.
+But in your own code you should avoid adding them again.
+
+See [issue 3305](https://github.com/plone/Products.CMFPlone/issues/3305).
+
+
 ## autoinclude
 
 We have replaced `z3c.autoinclude` with `plone.autoinclude`.
@@ -177,4 +188,3 @@ The same change is needed for the no longer supported `includeDependenciesOverri
 
 See [PLIP 3339](https://github.com/plone/Products.CMFPlone/issues/3339).
 Also see the [`plone.autoinclude`](https://github.com/plone/plone.autoinclude) documentation.
-
