--- a/docs/backend/upgrading/version_specific_migration/v60.md
+++ b/docs/backend/upgrading/version_specific_migration/v60.md
@@ -1,19 +1,27 @@
+(upgrade-plone-v60-label)=
+
 # Upgrade to Plone 6.0
 
 Plone 6.0 has seen the following major changes.
 Some may require changes in your setup.
 
+
+(v60-removed-portal_quickinstaller-label)=
+
 ## Removed portal_quickinstaller
+
 Plone no longer ships with the `portal_quickinstaller` tool (`CMFQuickInstallerTool`).
 In existing sites, the standard upgrade will remove the tool.
 This is the final step in a deprecation path that started in Plone 5.1.
-Documentation on how to switch to GenericSetup and the new installer, can be seen in the old [Plone 5.1 upgrade guide](
-https://docs.plone.org/develop/addons/upgrade_to_51.html#installation-code).
+Documentation on how to switch to GenericSetup and the new installer, can be seen in the old [Plone 5.1 upgrade guide](https://docs.plone.org/develop/addons/upgrade_to_51.html#installation-code).
 
 See [PLIP 1775](https://github.com/plone/Products.CMFPlone/issues/1775).
 
 
+(v60-dexterity-site-root-label)=
+
 ## Dexterity site root
+
 For content types, in Plone 4 and 5 you had the option to use the old Archetypes or the new Dexterity framework.
 The Plone Site root object was neither: it was in its own class.
 In Plone 6, the site root itself is a Dexterity object.
@@ -21,37 +29,47 @@ In Plone 6, the site root itself is a Dexterity object.
 When you upgrade a site from Plone 5.2 to 6.0, at first you will see an empty site root.
 Do not panic.
 Your contents are only temporarily invisible.
-Simply perform the standard migration via the `@@plone-upgrade` view and your content will be visible again.
+Perform the standard migration via the `@@plone-upgrade` view and your content will be visible again.
 
 See [PLIP 2454](https://github.com/plone/Products.CMFPlone/issues/2454).
 
 
+(v60-volto-label)=
+
 ## Volto
+
 Plone 6 ships with a new NodeJS frontend: Volto.
 When you use the `Plone` package in your project, you will get the `plone.volto` integration package.
 This package prepares your Plone Site as a REST API.
 
-Note: the classic integrated frontend is still available if you are not ready for the new separate frontend.
-Do not use the `plone.volto` package then.
+```{note}
+The classic integrated frontend which is called "Classic UI" is still available if you are not ready for the new separate frontend.
+If you choose to use Classic UI, then do not use the `plone.volto` package.
+```
 
 See [PLIP 2703](https://github.com/plone/Products.CMFPlone/issues/2703).
 
 
+(v60-archetypes-label)=
+
 ## Archetypes
+
 The deprecated Archetypes contenttypes framework is no longer supported.
-Add-ons that define a contenttype, must use Dexterity instead.
+Add-ons that define a contenttype must use Dexterity instead.
 
 See [PLIP 2775](https://github.com/plone/Products.CMFPlone/issues/2775).
 
+
+(v60-no-temp_folder-tempstorage)=
 
 ## No more temp_folder / tempstorage
 
 The `temp_folder` object in the Zope root is no longer created by default.
 If the object is there, but it is broken, the standard Plone upgrade procedure will remove it.
 
-For now, you must explicitly disable the temp_folder if you use buildout:
+For now you must explicitly disable the `temp_folder` if you use buildout:
 
-```
+```ini
 [instance]
 recipe = plone.recipe.zope2instance
 zodb-temporary-storage = off
@@ -60,15 +78,19 @@ zodb-temporary-storage = off
 See [issue 2957](https://github.com/plone/Products.CMFPlone/issues/2957).
 
 
+(v60-templates-bootstrap-5-label)=
+
 ## Changed Templates to Bootstrap 5 Markup
 
-All templates in core Plone have been updated to Bootstrap 5 markup.
+All templates in core Plone have been updated to use Bootstrap 5 markup.
 Add-on authors are encouraged to do the same.
 If you have customized a core template, you should check if your change is still needed, and update it to fit the new markup.
-Any CSS and JavaScript that relies on a specific structure, or certain ids or classes, should be checked as well.
+Any CSS and JavaScript that relies on a specific structure, or certain IDs or classes, should be checked as well.
 
 See [PLIP 2967](https://github.com/plone/Products.CMFPlone/issues/2967).
 
+
+(v60-zope-5-label)=
 
 ## Zope 5
 
@@ -83,6 +105,8 @@ If no warnings are shown, the add-on should run fine on Zope 5.
 See [PLIP 3058](https://github.com/plone/Products.CMFPlone/issues/3058).
 
 
+(v60-barceloneta-lts-label)=
+
 ## Modernize Plone default theme (Barceloneta LTS)
 
 The standard theme in Classic UI was updated to Bootstrap 5, CSS variables, and an icon library.
@@ -91,12 +115,16 @@ If you have a theme that builds on Barceloneta, you most likely need various cha
 It may be best to start with a fresh theme, and try to keep the changes minimal.
 The training documentation lists [three possible theming strategies](https://training.plone.org/5/theming/index.html):
 
+{ref}`three possible theming strategies <training:plone-6-classic-ui-theming>`
+
 - Create a theme based on Barceloneta
 - Create a theme from scratch
 - Create a theme based on Diazo
 
 See [PLIP 3061](https://github.com/plone/Products.CMFPlone/issues/3061).
 
+
+(v60--label)=
 
 ## Python
 
@@ -108,12 +136,16 @@ See https://www.python.org/downloads/ for which Python version is still supporte
 See [PLIP 3229](https://github.com/plone/Products.CMFPlone/issues/3229).
 
 
+(v60--label)=
+
 ## `plone.api.relation`
 
 The `plone.api` package now has a `relation` module. Add-on authors may want to use this to get, create or delete relations.
 
 See [PLIP 3137](https://github.com/plone/Products.CMFPlone/issues/3137).
 
+
+(v60--label)=
 
 ## Mockup and resource registry redone
 
@@ -130,6 +162,8 @@ Add-ons for Classic Plone only need to register bundles, not individual resource
 See [PLIP 3211](https://github.com/plone/Products.CMFPlone/issues/3211).
 
 
+(v60--label)=
+
 ## Relations control panel
 
 Plone 6 has a new control panel for relations: `@@inspect-relations`.
@@ -137,6 +171,8 @@ As Manager you may want to use this control panel to look for and fix possible p
 
 See [PLIP 3232](https://github.com/plone/Products.CMFPlone/issues/3232).
 
+
+(v60--label)=
 
 ## Deprecated unicode property types
 
@@ -148,6 +184,8 @@ But in your own code you should avoid adding them again.
 
 See [issue 3305](https://github.com/plone/Products.CMFPlone/issues/3305).
 
+
+(v60--label)=
 
 ## autoinclude
 
