Use intersphinx link

--- a/docs/backend/upgrading/version_specific_migration/v60.md
+++ b/docs/backend/upgrading/version_specific_migration/v60.md
@@ -113,9 +113,7 @@ The standard theme in Classic UI was updated to Bootstrap 5, CSS variables, and 
 If you have a theme that builds on Barceloneta, you most likely need various changes.
 
 It may be best to start with a fresh theme, and try to keep the changes minimal.
-The training documentation lists [three possible theming strategies](https://training.plone.org/5/theming/index.html):
-
-{ref}`three possible theming strategies <training:plone-6-classic-ui-theming>`
+The training documentation lists {ref}`three possible theming strategies <training:theming-label>`:
 
 - Create a theme based on Barceloneta
 - Create a theme from scratch
