Add MyST for labels, clean up English grammar and syntax

--- a/docs/backend/upgrading/version_specific_migration/v60.md
+++ b/docs/backend/upgrading/version_specific_migration/v60.md
@@ -122,35 +122,36 @@ The training documentation lists {ref}`three possible theming strategies <traini
 See [PLIP 3061](https://github.com/plone/Products.CMFPlone/issues/3061).
 
 
-(v60--label)=
+(v60-python-label)=
 
 ## Python
 
 You may need to use a newer Python version.
-Supported Python versions are: 3.7, 3.8 and 3.9.
+Supported Python versions are 3.7, 3.8, and 3.9.
 We recommend the most recent version.
 See https://www.python.org/downloads/ for which Python version is still supported by the Python community.
 
 See [PLIP 3229](https://github.com/plone/Products.CMFPlone/issues/3229).
 
 
-(v60--label)=
+(v60-plone.api.relation-label)=
 
 ## `plone.api.relation`
 
-The `plone.api` package now has a `relation` module. Add-on authors may want to use this to get, create or delete relations.
+The `plone.api` package now has a `relation` module.
+Add-on authors may want to use this to get, create, or delete relations.
 
 See [PLIP 3137](https://github.com/plone/Products.CMFPlone/issues/3137).
 
 
-(v60--label)=
+(v60-mockup-resource-registry-label)=
 
 ## Mockup and resource registry redone
 
 Mockup contains the source of most Classic Plone JavaScript.
 The compiled version is in `plone.staticresources`.
 
-Mockup is now based on Patternslib 4.
+Mockup is now based on [Patternslib 4](https://patternslib.com/).
 It uses ES6 module imports instead of RequireJS.
 Add-ons for Classic Plone that use JavaScript should be updated to use ES6 modules as well.
 
@@ -160,48 +161,49 @@ Add-ons for Classic Plone only need to register bundles, not individual resource
 See [PLIP 3211](https://github.com/plone/Products.CMFPlone/issues/3211).
 
 
-(v60--label)=
+(v60-relations-control-panel-label)=
 
 ## Relations control panel
 
-Plone 6 has a new control panel for relations: `@@inspect-relations`.
+Plone 6 has a new control panel for relations, `@@inspect-relations`.
 As Manager you may want to use this control panel to look for and fix possible problems.
 
 See [PLIP 3232](https://github.com/plone/Products.CMFPlone/issues/3232).
 
 
-(v60--label)=
+(v60-deprecated-unicode-property-types-label)=
 
-## Deprecated unicode property types
+## Deprecated Unicode property types
 
-Zope 5 has deprecated the unicode property types: ustring, ulines, utext, utokens.
-If you use these in your add-on, you should switch to their standard variants: string, lines, text, tokens.
+Zope 5 has deprecated the Unicode property types `ustring`, `ulines`, `utext`, and `utokens`.
+If you use these in your add-on, you should switch to their standard variants `string`, `lines`, `text`, and `tokens`.
 These behave exactly the same on Python 3.
-Plone has an upgrade step that goes through all objects in the site, replacing the deprecated properties with the default ones, so you should not see them anymore.
-But in your own code you should avoid adding them again.
+Plone has an upgrade step that goes through all objects in the site, replacing the deprecated properties with the default ones.
+You should avoid adding them to your code.
 
 See [issue 3305](https://github.com/plone/Products.CMFPlone/issues/3305).
 
 
-(v60--label)=
+(v60-autoinclude-label)=
 
 ## autoinclude
 
 We have replaced `z3c.autoinclude` with `plone.autoinclude`.
-Both are used by add-ons (Python packages) to signal with an entry point that Plone must load the zcml of the add-on.
-In most cases, the existing entry point can stay the same, for example in `setup.py`:
+Both are used by add-ons (Python packages) to signal with an entry point that Plone must load the ZCML of the add-on.
+In most cases, the existing entry point can stay the same.
+For example in `setup.py`:
 
-```
+```python
 entry_points="""
 [z3c.autoinclude.plugin]
 target = plone
 """
 ```
 
-When your package name differs from your module name, so what you import in Python, you need a different entry point.
-When your module is called `example.alternative`, create this entry point:
+When your package name differs from your module name, you need to specify a differently named entry point.
+When your module is named `example.alternative`, create this entry point:
 
-```
+```python
 entry_points="""
 [plone.autoinclude.plugin]
 target = plone
@@ -209,13 +211,13 @@ module = example.alternative
 """
 ```
 
-A second change that may influence add-ons, is that the `includeDependencies` directive is no longer supported.
+The `includeDependencies` directive is no longer supported.
 It was already recommended not to use this directive, as it is too implicit.
-In the zcml files of your add-on, search for `includeDependencies`.
-If you find it, you must replace it by explicitly loading any zcml from other packages that the add-on needs.
-Sample change from [`dexterity.membrane`](https://github.com/collective/dexterity.membrane/pull/60):
+In the ZCML files of your add-on, search for `includeDependencies`.
+Replace all of its instances by explicitly loading any ZCML from other packages used by the add-on.
+Here is a sample change from [`dexterity.membrane`](https://github.com/collective/dexterity.membrane/pull/60):
 
-```
+```diff
 -  <includeDependencies package="." />
 +  <include package="Products.membrane" />
 ```
