Add the backend structure, clean up the index toctree

--- a/docs/backend/upgrading/v60.md
+++ b/docs/backend/upgrading/v60.md
@@ -1,6 +1,6 @@
-(upgrade-plone-v60-label)=
+(backend-upgrade-plone-v60-label)=
 
-# Upgrade to Plone 6.0
+# Upgrading to Plone 6.0
 
 Plone 6.0 has seen the following major changes.
 Some may require changes in your setup.
