--- a/docs/backend/upgrading/v60.md
+++ b/docs/backend/upgrading/v60.md
@@ -168,7 +168,7 @@ See [PLIP 3211](https://github.com/plone/Products.CMFPlone/issues/3211).
 Plone 6 has a new control panel for relations, `@@inspect-relations`.
 As Manager you may want to use this control panel to look for and fix possible problems.
 
-See [PLIP 3232](https://github.com/plone/Products.CMFPlone/issues/3232).
+See [PLIP 3232](https://github.com/plone/Products.CMFPlone/pull/3232).
 
 
 (v60-deprecated-unicode-property-types-label)=
