Improve the upgrade guide
See https://github.com/plone/plone.app.contenttypes/issues/623

Closes #1170

--- a/docs/backend/upgrading/v60.md
+++ b/docs/backend/upgrading/v60.md
@@ -68,6 +68,29 @@ Add-ons that define a contenttype must use Dexterity instead.
 See [PLIP 2775](https://github.com/plone/Products.CMFPlone/issues/2775).
 
 
+(v60-deprecated-views-label)=
+
+## Some deprecated views have been removed
+
+In Plone 6 some legacy views aliases have been removed.
+You can replace them with the new ones based on the following table:
+
+| Legacy name         | New name     |
+|---------------------|--------------|
+| all_content         | full_view    |
+| atct_album_view     | album_view   |
+| collection_view     | listing_view |
+| folder_album_view   | album_view   |
+| folder_full_view    | full_view    |
+| folder_listing      | listing_view |
+| folder_summary_view | summary_view |
+| folder_tabular_view | tabular_view |
+| standard_view       | listing_view |
+| thumbnail_view      | album_view   |
+
+See [plone/plone.app.contenttypes#621](https://github.com/plone/plone.app.contenttypes/pull/621)
+
+
 (v60-no-temp_folder-tempstorage)=
 
 ## No more temp_folder / tempstorage
