--- a/docs/backend/upgrading/v60.md
+++ b/docs/backend/upgrading/v60.md
@@ -1,9 +1,9 @@
 ---
 html_meta:
-  "description": ""
-  "property=og:description": ""
-  "property=og:title": ""
-  "keywords": ""
+  "description": "Upgrading to Plone 6.0"
+  "property=og:description": "Upgrading to Plone 6.0"
+  "property=og:title": "Upgrading to Plone 6.0"
+  "keywords": "Upgrading, Plone 6"
 ---
 
 (backend-upgrade-plone-v60-label)=
@@ -72,7 +72,7 @@ See [PLIP 2775](https://github.com/plone/Products.CMFPlone/issues/2775).
 
 ## Some deprecated views have been removed
 
-In Plone 6 some legacy views aliases have been removed.
+In Plone 6 some legacy view aliases have been removed.
 You can replace them with the new ones based on the following table:
 
 | Legacy name         | New name     |
@@ -88,7 +88,7 @@ You can replace them with the new ones based on the following table:
 | standard_view       | listing_view |
 | thumbnail_view      | album_view   |
 
-See [plone/plone.app.contenttypes#621](https://github.com/plone/plone.app.contenttypes/pull/621)
+See [plone/plone.app.contenttypes#621](https://github.com/plone/plone.app.contenttypes/pull/621).
 
 
 (v60-no-temp_folder-tempstorage)=
