--- a/docs/backend/upgrading/v60.md
+++ b/docs/backend/upgrading/v60.md
@@ -55,6 +55,9 @@ The classic integrated frontend which is called "Classic UI" is still available 
 If you choose to use Classic UI, then do not use the `plone.volto` package.
 ```
 
+To learn how to upgrade a existing site to run on Volto please read [Upgrading to Volto](backend-upgrade-to-volto-label)
+
+
 See [PLIP 2703](https://github.com/plone/Products.CMFPlone/issues/2703).
 
 
