Update topmatter keys to reside under `myst` key.
Closes https://github.com/plone/documentation/issues/1263

--- a/docs/backend/upgrading/v60.md
+++ b/docs/backend/upgrading/v60.md
@@ -1,9 +1,10 @@
 ---
-html_meta:
-  "description": "Upgrading to Plone 6.0"
-  "property=og:description": "Upgrading to Plone 6.0"
-  "property=og:title": "Upgrading to Plone 6.0"
-  "keywords": "Upgrading, Plone 6"
+myst:
+  html_meta:
+    "description": "Upgrading to Plone 6.0"
+    "property=og:description": "Upgrading to Plone 6.0"
+    "property=og:title": "Upgrading to Plone 6.0"
+    "keywords": "Upgrading, Plone 6"
 ---
 
 (backend-upgrade-plone-v60-label)=
